--- a/src/app/inside/inside.component.html
+++ b/src/app/inside/inside.component.html
@@ -29,7 +29,7 @@
                                 <li><a href="">Products</a></li>
                                 <li><a href="">Users</a></li>
                             </ul>
-                        <li><a href=""><i class="ti-shopping-cart"></i> <span>Transactions</span></a></li>
+                        <li><a routerLink="/transactions"><i class="ti-shopping-cart"></i> <span>Transactions</span></a></li>
 
                     </ul>
                 </nav>
@@ -212,7 +212,7 @@
     <!-- footer area start-->
     <footer>
         <div class="footer-area">
-            <p>© Copyright 2018. All right reserved. Template by <a href="https://colorlib.com/wp/">Colorlib</a>.</p>
+            <p>© Copyright 2020. Admin Sun Shop.</p>
         </div>
     </footer>
     <!-- footer area end-->
