--- a/src/app/inside/inside.component.html
+++ b/src/app/inside/inside.component.html
@@ -19,17 +19,17 @@
             <div class="menu-inner">
                 <nav>
                     <ul class="metismenu" id="menu">
-                        <li><a routerLink="/dashboard"><i class="ti-dashboard"></i> <span>Dashboard</span></a></li>
+                        <li><a href="/dashboard"><i class="ti-dashboard"></i> <span>Dashboard</span></a></li>
                         <li>
                             <a href="javascript:void(0)" aria-expanded="true"><i class="ti-layout-column3"></i><span>
                                     Manage
                                 </span></a>
                             <ul class="collapse">
-                                <li><a href="">Categories</a></li>
-                                <li><a href="">Products</a></li>
-                                <li><a href="">Users</a></li>
+                                <li><a routerLink="/categories">Categories</a></li>
+                                <li><a routerLink="/products">Products</a></li>
+                                <li><a routerLink="/users">Users</a></li>
                             </ul>
-                        <li><a routerLink="/transactions"><i class="ti-shopping-cart"></i> <span>Transactions</span></a></li>
+                            <li><a routerLink="/transactions"><i class="ti-shopping-cart"></i> <span>Transactions</span></a></li>
 
                     </ul>
                 </nav>
