--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -97,6 +97,7 @@
     padding: 0 30px 50px;
 }
 
+
 /*------------------------- END Core Css -------------------*/
 
 
@@ -143,17 +144,20 @@
     background: #303641;
     border-bottom: 1px solid #343e50;
 }
-.sidebar-menu .logo{
+
+.sidebar-menu .logo {
     text-align: center;
 }
+
 .logo a {
     display: inline-block;
     max-width: 120px;
 }
 
-.metismenu >li >a {
+.metismenu>li>a {
     padding-left: 32px!important;
 }
+
 .metismenu li a {
     position: relative;
     display: block;
@@ -206,8 +210,8 @@
     padding-left: 37px;
 }
 
-.metismenu >li:hover>a,
-.metismenu >li.active>a {
+.metismenu>li:hover>a,
+.metismenu>li.active>a {
     color: #fff;
     background: #343942;
 }
@@ -225,6 +229,7 @@
 .metismenu li li a:after {
     top: 6px;
 }
+
 
 /*-------------------- END Sidebar Menu -------------------*/
 
@@ -255,7 +260,7 @@
 
 .mainheader-area .notification-area {
     -webkit-transform: translateY(-11px);
-            transform: translateY(-11px);
+    transform: translateY(-11px);
 }
 
 .mainheader-area {
@@ -342,6 +347,7 @@
     width: 100%;
 }
 
+
 /* mobile menu */
 
 .slicknav_menu {
@@ -390,6 +396,7 @@
     float: right;
 }
 
+
 /*-------------------- END Horizontal Menu -------------------*/
 
 
@@ -424,12 +431,12 @@
 
 .nav-btn span:first-child {
     -webkit-transform: rotate(45deg)translate(5px, 5px);
-            transform: rotate(45deg)translate(5px, 5px);
+    transform: rotate(45deg)translate(5px, 5px);
 }
 
 .nav-btn span:last-child {
     -webkit-transform: rotate(-45deg)translate(3px, -3px);
-            transform: rotate(-45deg)translate(3px, -3px);
+    transform: rotate(-45deg)translate(3px, -3px);
 }
 
 .sbar_collapsed .nav-btn span {
@@ -477,9 +484,9 @@
 
 .notification-area {
     -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     position: relative;
     z-index: 1;
 }
@@ -489,9 +496,9 @@
     margin-left: 20px;
     cursor: pointer;
     -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .notification-area li.settings-btn.active i {
@@ -606,6 +613,7 @@
     font-weight: 300;
 }
 
+
 /* notify envelope */
 
 .expanded .notification-area li#full-view-exit {
@@ -644,7 +652,9 @@
     margin-top: 4px;
 }
 
+
 /*-------------------- END Header Area -------------------*/
+
 
 /*-------------------- 2.3 Page Title Area -------------------*/
 
@@ -663,7 +673,7 @@
     height: 36px;
     background: var(--primary-color);
     -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 .page-title {
@@ -713,10 +723,10 @@ ul.breadcrumbs {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     background: -webkit-linear-gradient(left, #8914fe 0%, #8063f5 100%);
     background: linear-gradient(to right, #8914fe 0%, #8063f5 100%);
     padding: 17px 38px;
@@ -737,9 +747,9 @@ ul.breadcrumbs {
     letter-spacing: 0;
     cursor: pointer;
     -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .user-name i {
@@ -764,7 +774,7 @@ ul.breadcrumbs {
     background: #fff;
     border: none;
     -webkit-transform: none!important;
-            transform: none!important;
+    transform: none!important;
     top: 130%!important;
     right: 30px!important;
     left: auto!important;
@@ -801,6 +811,7 @@ ul.breadcrumbs {
     background: #f8f9fa;
     color: #2942fa;
 }
+
 
 /*-------------------- END Page Title Area -------------------*/
 
@@ -875,6 +886,7 @@ ul.breadcrumbs {
     display: none;
 }
 
+
 /*-------------------- END Fact Area ------------------- */
 
 
@@ -928,13 +940,13 @@ table.dbkit-table tr {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
+    flex-wrap: nowrap;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     height: 71px;
     border: 1px solid transparent;
     padding: 0 30px;
@@ -980,6 +992,7 @@ table.dbkit-table tr td {
 .sell img {
     margin-left: 10px;
 }
+
 
 /*-------------------- END Market value ------------------- */
 
@@ -1044,6 +1057,7 @@ table.dbkit-table tr td {
     color: #ff0e0e;
 }
 
+
 /*-------------------- END Live Crypto Price ------------------- */
 
 
@@ -1067,6 +1081,7 @@ table.dbkit-table tr td {
     color: #565656;
 }
 
+
 /*-------------------- END Trading History ------------------- */
 
 
@@ -1078,20 +1093,20 @@ table.dbkit-table tr td {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
 }
 
 .lts-thumb {
     -ms-flex-preferred-size: calc(40% - 10px);
-        flex-basis: calc(40% - 10px);
+    flex-basis: calc(40% - 10px);
 }
 
 .lts-content {
     -ms-flex-preferred-size: calc(60% - 10px);
-        flex-basis: calc(60% - 10px);
+    flex-basis: calc(60% - 10px);
 }
 
 .lts-content span {
@@ -1192,6 +1207,7 @@ table.dbkit-table tr td {
     margin-bottom: 0;
 }
 
+
 /*-------------------- END Letest Post ------------------- */
 
 
@@ -1207,7 +1223,6 @@ table.dbkit-table tr td {
 #visitor_graph {
     height: 400px;
 }
-
 
 
 /* Todays Order List */
@@ -1243,6 +1258,7 @@ table.dbkit-table tr td {
 .pagination_area ul li a i {
     font-size: 14px;
 }
+
 
 /* team member area */
 
@@ -1296,6 +1312,7 @@ table.dbkit-table tr td {
     margin: 15px 0;
 }
 
+
 /*-------------------- END Dashboard Two ------------------- */
 
 
@@ -1336,7 +1353,7 @@ table.dbkit-table tr td {
     margin-right: 20px;
     vertical-align: middle;
     -webkit-transform: translateY(-5px);
-            transform: translateY(-5px);
+    transform: translateY(-5px);
     display: inline-block;
 }
 
@@ -1351,11 +1368,13 @@ table.dbkit-table tr td {
     max-width: 200px;
 }
 
+
 /* socialads */
 
 .highcharts-credits {
     display: none;
 }
+
 
 /* user-statistics */
 
@@ -1363,11 +1382,13 @@ table.dbkit-table tr td {
     height: 350px;
 }
 
+
 /* salesanalytic */
 
 #salesanalytic {
     height: 500px;
 }
+
 
 /* timeline */
 
@@ -1578,6 +1599,7 @@ table.dbkit-table tr td {
     background: #f7cb3f;
 }
 
+
 /*-------------------- END Dashboard Three ------------------- */
 
 
@@ -1596,6 +1618,7 @@ table.dbkit-table tr td {
     display: none!important;
 }
 
+
 /*-------------------- END Bar Chart ------------------- */
 
 
@@ -1608,7 +1631,6 @@ table.dbkit-table tr td {
 #amlinechart5 {
     height: 400px;
 }
-
 
 
 /*-------------------- END Line Chart ------------------- */
@@ -1626,7 +1648,9 @@ table.dbkit-table tr td {
     width: 100%;
 }
 
+
 /*-------------------- END Pie Chart ------------------- */
+
 
 /*-------------------- 8. Accroding ------------------- */
 
@@ -1682,7 +1706,6 @@ table.dbkit-table tr td {
 }
 
 
-
 /* accordion-3 */
 
 .accordion-s3 .card-header a.collapsed:before {
@@ -1707,6 +1730,7 @@ table.dbkit-table tr td {
 .gradiant-bg .card-header a:before {
     color: #fff;
 }
+
 
 /*-------------------- END Accroding ------------------- */
 
@@ -1761,6 +1785,7 @@ table.dbkit-table tr td {
     color: #d6a20c;
 }
 
+
 /* additional content */
 
 .alert-heading {
@@ -1776,6 +1801,7 @@ table.dbkit-table tr td {
     outline: none;
     font-size: 13px;
 }
+
 
 /*-------------------- END Alert------------------- */
 
@@ -1814,6 +1840,7 @@ table.dbkit-table tr td {
     line-height: 19px;
 }
 
+
 /*-------------------- END Badge------------------- */
 
 
@@ -1827,7 +1854,9 @@ table.dbkit-table tr td {
     border-radius: 50px;
 }
 
+
 /*-------------------- END Button ------------------- */
+
 
 /*-------------------- 12. Cards ------------------- */
 
@@ -1845,6 +1874,7 @@ p.card-text {
     margin-bottom: 23px;
 }
 
+
 /*-------------------- END Cards ------------------- */
 
 
@@ -1857,6 +1887,7 @@ p.card-text {
 .dropdown-item {
     font-size: 14px;
 }
+
 
 /*-------------------- END Dropdown Button ------------------- */
 
@@ -1887,6 +1918,7 @@ p.card-text {
     max-width: 100%;
 }
 
+
 /*-------------------- END Modal ------------------- */
 
 
@@ -1899,6 +1931,7 @@ p.card-text {
 .pagination li a {
     font-family: 'lato', sans-serif;
 }
+
 
 /*-------------------- END Pagination ------------------- */
 
@@ -1943,7 +1976,7 @@ p.card-text {
 }
 
 label {
-    font-weight: 500;
+    font-weight: 600;
     color: #666;
     display: inline-block;
     margin-bottom: 8px;
@@ -1984,6 +2017,7 @@ label {
     margin-top: 2px;
 }
 
+
 /*-------------------- END Form ------------------- */
 
 
@@ -2008,7 +2042,6 @@ label {
 }
 
 
-
 /* icon-container */
 
 .icon-section {
@@ -2016,13 +2049,13 @@ label {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
 }
 
 .icon-container {
     cursor: pointer;
     -ms-flex-preferred-size: calc(100% * (1/4));
-        flex-basis: calc(100% * (1/4));
+    flex-basis: calc(100% * (1/4));
 }
 
 .icon-container [class^="ti-"] {
@@ -2035,9 +2068,9 @@ label {
 
 .icon-container:hover [class^="ti-"] {
     -webkit-transform: scale(2);
-            transform: scale(2);
+    transform: scale(2);
     -webkit-transform-origin: left center;
-            transform-origin: left center;
+    transform-origin: left center;
 }
 
 .icon-container span.icon-name {
@@ -2051,12 +2084,13 @@ label {
 
 .icon-container:hover span.icon-name {
     -webkit-transform: translateX(10px);
-            transform: translateX(10px);
+    transform: translateX(10px);
 }
 
 .icon-container:hover span {
     color: #007BFF;
 }
+
 
 /*-------------------- END Icons ------------------- */
 
@@ -2094,6 +2128,7 @@ table tr td [class^="ti-"] {
     vertical-align: middle;
 }
 
+
 /*-------------------- END Table Basic ------------------- */
 
 
@@ -2103,6 +2138,7 @@ div.dataTables_wrapper div.dataTables_length select {
     width: 76px;
     margin: 0 10px;
 }
+
 
 /* datatable-primary */
 
@@ -2157,7 +2193,6 @@ table.dataTable thead td {
 }
 
 
-
 /* datatable-dark */
 
 .datatable-dark thead {
@@ -2190,6 +2225,7 @@ table.dataTable thead td {
     border-color: #999;
 }
 
+
 /*-------------------- END Datatable ------------------- */
 
 
@@ -2208,7 +2244,9 @@ table.dataTable thead td {
     height: 600px;
 }
 
+
 /*-------------------- END Map Start ------------------- */
+
 
 /*-------------------- 22. Invoice ------------------- */
 
@@ -2291,6 +2329,7 @@ table.dataTable thead td {
 .invoice-buttons a:hover {
     background: #574494;
 }
+
 
 /*-------------------- END Invoice ------------------- */
 
@@ -2389,7 +2428,11 @@ table.dataTable thead td {
     font-size: 16px;
 }
 
-.form-gp.has-error, .form-gp.has-error label, .form-gp.has-error input, .form-gp.has-error input::placeholder, .form-gp.has-error i {
+.form-gp.has-error,
+.form-gp.has-error label,
+.form-gp.has-error input,
+.form-gp.has-error input::placeholder,
+.form-gp.has-error i {
     color: var(--red);
 }
 
@@ -2472,6 +2515,7 @@ table.dataTable thead td {
     margin-left: 5px;
 }
 
+
 /* login-s2 */
 
 .login-s2 {
@@ -2505,6 +2549,7 @@ table.dataTable thead td {
     color: #444;
 }
 
+
 /* login-s3 */
 
 .login-bg {
@@ -2526,7 +2571,6 @@ table.dataTable thead td {
 }
 
 
-
 /* register 4 page */
 
 .login-box-s2 {
@@ -2544,6 +2588,7 @@ table.dataTable thead td {
     width: 100%;
     max-width: 500px;
 }
+
 
 /*-------------------- END Login ------------------- */
 
@@ -2606,6 +2651,7 @@ table.dataTable thead td {
     box-shadow: 0 3px 25px rgba(27, 27, 27, 0.38);
 }
 
+
 /*-------------------- END Pricing ------------------- */
 
 
@@ -2652,6 +2698,7 @@ table.dataTable thead td {
     border-radius: 3px;
 }
 
+
 /*-------------------- END 404 Page ------------------- */
 
 
@@ -2690,7 +2737,7 @@ table.dataTable thead td {
 
 .offset-close:hover {
     -webkit-transform: rotate(90deg);
-            transform: rotate(90deg);
+    transform: rotate(90deg);
 }
 
 .offset-menu-tab {
@@ -2798,7 +2845,7 @@ table.dataTable thead td {
 .s-swtich input:checked+label:after {
     left: calc(100% - 5px);
     -webkit-transform: translateX(-100%);
-            transform: translateX(-100%);
+    transform: translateX(-100%);
 }
 
 .s-swtich label:active:after {
@@ -2819,13 +2866,13 @@ table.dataTable thead td {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
+    flex-wrap: nowrap;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     margin-bottom: 20px;
 }
 
@@ -2834,4 +2881,46 @@ table.dataTable thead td {
     color: #555;
 }
 
+
 /*-------------------- END Offset Sidebar ------------------- */
+
+
+/*-------------------- Form Create ------------------- */
+
+#formCreate .btn-create-add {
+    background-color: #8914fe;
+    background-image: none;
+    border-color: #8914fe;
+}
+
+#formCreate .button-name {
+    font-size: 14px;
+    font-weight: 500;
+    color: #fff;
+}
+
+#formCreate .btn-add {
+    color: #6a56a5;
+    background-color: transparent;
+    background-image: none;
+    border-color: #6a56a5;
+    margin-bottom: 20px;
+}
+
+#formCreate .btn-add:hover {
+    color: #6a56a5;
+    background-color: #f3eeff;
+    border-color: #f3eeff;
+}
+
+#formCreate .boxShadow {
+    background: #fff;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+#formCreate .hasBottom {
+    min-height: calc(100vh - 130px);
+    position: relative;
+    padding-top: 60px;
+}
