--- a/src/app/inside/category/create-edit/create-edit.component.html
+++ b/src/app/inside/category/create-edit/create-edit.component.html
@@ -1,3 +1,12 @@
+<div *ngIf="sttNotifi" id="toast-container" class="toast-top-right">
+    <div class="alert alert-dismissible toast" [ngClass]="sttTextNotifi" aria-live="polite">
+        <button type="button" class="toast-close-button" role="button" (click)="dismissToast()">×</button>
+        <div class="toast-message">
+            {{textNotifi}}
+        </div>
+    </div>
+</div>
+
 <div id="formCreate">
     <!-- page title area start -->
     <div class="page-title-area">
@@ -6,20 +15,18 @@
                 <div class="breadcrumbs-area clearfix">
                     <h4 class="page-title pull-left">Dashboard</h4>
                     <ul class="breadcrumbs pull-left">
-                        <li><a [routerLink]="['/dashboard']">Home</a></li>
-                        <li><a [routerLink]="['/categories']">Category</a></li>
+                        <li><a href="/dashboard">Home</a></li>
+                        <li><a href="/categories">Category</a></li>
                         <li><span>Create</span></li>
                     </ul>
                 </div>
             </div>
             <div class="col-sm-6 clearfix">
                 <div class="user-profile pull-right">
-                    <img class="avatar user-thumb" src="assets/images/author/avatar.png" alt="avatar">
-                    <h4 class="user-name dropdown-toggle" data-toggle="dropdown">Kumkum Rai <i class="fa fa-angle-down"></i></h4>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Message</a>
-                        <a class="dropdown-item" href="#">Settings</a>
-                        <a class="dropdown-item" href="#">Log Out</a>
+                    <div class="search-box pull-left">
+                        <form action="#">
+                            <div style="height: 40px"></div>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -31,16 +38,16 @@
             <div class="row">
                 <div class="col-md-4">
                     <h4 class="header-title">Information</h4>
-                    <span>More information about </span>
+                    <span>More information about category</span>
                 </div>
                 <div class="col-md-8">
                     <div class="boxShadow">
-                        <form [formGroup]="formCreate">
+                        <form [formGroup]="formCreated">
                             <div class="form-group">
                                 <label>Name</label>
                                 <input type="text" class="form-control" formControlName="name" required>
-                                <div *ngIf="formCreate.get('name').invalid && (formCreate.get('name').dirty || formCreate.get('name').touched)" class="text-danger">
-                                    <div *ngIf="formCreate.get('name').errors.required">
+                                <div *ngIf="formCreated.get('name').invalid && (formCreated.get('name').dirty || formCreated.get('name').touched)" class="text-danger">
+                                    <div *ngIf="formCreated.get('name').errors.required">
                                         Đây là trường bắt buộc phải nhập.
                                     </div>
                                 </div>
@@ -49,16 +56,42 @@
                                 <label>Description</label>
                                 <textarea class="form-control" cols="10" rows="5" formControlName="description" required>
                                 </textarea>
-                                <div *ngIf="formCreate.get('description').invalid && (formCreate.get('description').dirty || formCreate.get('description').touched)" class="text-danger">
-                                    <div *ngIf="formCreate.get('description').errors.required">
+                                <div *ngIf="formCreated.get('description').invalid && (formCreated.get('description').dirty || formCreated.get('description').touched)" class="text-danger">
+                                    <div *ngIf="formCreated.get('description').errors.required">
                                         Đây là trường bắt buộc phải nhập.
                                     </div>
                                 </div>
                             </div>
-                            <div class="text-right">
-                                <button [disabled]="formCreate.invalid" type="submit" class="btn btn-create-add">
+                            <div class="form-group">
+                                <label>Status</label>
+                                <div class="row">
+                                    <div class="input-group col-md-6">
+                                        <div class="input-group-prepend">
+                                            <div class="input-group-text">
+                                                <input type="radio" id="active" name="status" value="Active" formControlName="status">
+                                            </div>
+                                        </div>
+                                        <input type="text" class="form-control" readonly value="Active">
+                                    </div>
+                                    <div class="input-group col-md-6">
+                                        <div class="input-group-prepend">
+                                            <div class="input-group-text">
+                                                <input type="radio" id="deactive" name="status" value="Deactive" formControlName="status">
+                                            </div>
+                                        </div>
+                                        <input type="text" class="form-control" readonly value="Deactive">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="text-right ">
+                                <button *ngIf="sttAdd" [disabled]="formCreated.invalid" type="submit " class="btn btn-create-add" (click)="createCategory()">
                                     <h4 class="button-name">
                                         Create
+                                    </h4>
+                                </button>
+                                <button *ngIf="!sttAdd" [disabled]="formCreated.invalid" type="submit " class="btn btn-create-add" (click)="updateCategory()">
+                                    <h4 class="button-name">
+                                        Update
                                     </h4>
                                 </button>
                             </div>
