--- a/src/app/inside/product/product.component.html
+++ b/src/app/inside/product/product.component.html
@@ -1,3 +1,12 @@
+<div *ngIf="sttNotifi" id="toast-container" class="toast-top-right">
+    <div class="alert alert-dismissible toast" [ngClass]="sttTextNotifi" aria-live="polite">
+        <button type="button" class="toast-close-button" role="button" (click)="dismissToast()">×</button>
+        <div class="toast-message">
+            {{textNotifi}}
+        </div>
+    </div>
+</div>
+
 <div id="formCreate">
     <!-- page title area start -->
     <div class="page-title-area">
@@ -13,12 +22,11 @@
             </div>
             <div class="col-sm-6 clearfix">
                 <div class="user-profile pull-right">
-                    <img class="avatar user-thumb" src="assets/images/author/avatar.png" alt="avatar">
-                    <h4 class="user-name dropdown-toggle" data-toggle="dropdown">Kumkum Rai <i class="fa fa-angle-down"></i></h4>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Message</a>
-                        <a class="dropdown-item" href="#">Settings</a>
-                        <a class="dropdown-item" href="#">Log Out</a>
+                    <div class="search-box pull-left">
+                        <form action="#">
+                            <input type="text" name="search" placeholder="Search...">
+                            <i class="ti-search"></i>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -29,12 +37,12 @@
         <div class="row">
             <!-- Progress Table start -->
             <div class="col-12 mt-5">
-                <div [routerLink]="['/product/create-edit']">
+                <a href="/product/create-edit">
                     <button type="button" class="btn btn-add">
-                    <i class="fa fa-plus-circle"></i>
-                    Create
-                </button>
-                </div>
+                        <i class="fa fa-plus-circle"></i>
+                        Create
+                    </button>
+                </a>
                 <div class="card">
                     <div class="card-body">
                         <h4 class="header-title">Progress Table</h4>
@@ -43,80 +51,34 @@
                                 <table class="table table-hover progress-table text-center">
                                     <thead class="text-uppercase">
                                         <tr>
-                                            <th scope="col">ID</th>
-                                            <th scope="col">task</th>
-                                            <th scope="col">Deadline</th>
-                                            <th scope="col">Progress</th>
-                                            <th scope="col">status</th>
-                                            <th scope="col">action</th>
+                                            <th scope="col">No</th>
+                                            <th scope="col">Created At</th>
+                                            <th scope="col">Updated At</th>
+                                            <th scope="col">Name</th>
+                                            <th scope="col">Description</th>
+                                            <th scope="col">Status</th>
+                                            <th scope="col">Action</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <th scope="row">1</th>
-                                            <td>Mark</td>
-                                            <td>09 / 07 / 2018</td>
-                                            <td>
-                                                <div class="progress" style="height: 8px;">
-                                                    <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                                </div>
-                                            </td>
-                                            <td><span class="status-p bg-primary">pending</span></td>
-                                            <td>
-                                                <ul class="d-flex justify-content-center">
-                                                    <li class="mr-3"><a href="#" class="text-secondary"><i class="fa fa-edit"></i></a></li>
-                                                    <li><a href="#" class="text-danger"><i class="ti-trash"></i></a></li>
-                                                </ul>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">2</th>
-                                            <td>Mark</td>
-                                            <td>09 / 07 / 2018</td>
-                                            <td>
-                                                <div class="progress" style="height: 8px;">
-                                                    <div class="progress-bar bg-warning" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                                </div>
-                                            </td>
-                                            <td><span class="status-p bg-warning">pending</span></td>
+                                        <tr *ngFor="let item of productDataList, let i = index">
+                                            <th scope="row">{{i + 1}}</th>
+                                            <td>{{item.createdAt}}</td>
+                                            <td>{{item.createdAt | date:'yyyy/MM/dd - HH:mm:ss':'VI'}}</td>
+                                            <td>{{item.productName}}</td>
+                                            <td>{{item.description}}</td>
+                                            <td *ngIf="item.status === 'Active'"><span class="status-p bg-success">Active</span></td>
+                                            <td *ngIf="item.status === 'Deactive'"><span class="status-p bg-secondary">DeActive</span></td>
+                                            <td *ngIf="item.status === 'Deleted'"><span class="status-p bg-danger">Deleted</span></td>
                                             <td>
                                                 <ul class="d-flex justify-content-center">
-                                                    <li class="mr-3"><a href="#" class="text-secondary"><i class="fa fa-edit"></i></a></li>
-                                                    <li><a href="#" class="text-danger"><i class="ti-trash"></i></a></li>
-                                                </ul>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">3</th>
-                                            <td>Mark</td>
-                                            <td>09 / 07 / 2018</td>
-                                            <td>
-                                                <div class="progress" style="height: 8px;">
-                                                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                                </div>
-                                            </td>
-                                            <td><span class="status-p bg-success">complate</span></td>
-                                            <td>
-                                                <ul class="d-flex justify-content-center">
-                                                    <li class="mr-3"><a href="#" class="text-secondary"><i class="fa fa-edit"></i></a></li>
-                                                    <li><a href="#" class="text-danger"><i class="ti-trash"></i></a></li>
-                                                </ul>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">4</th>
-                                            <td>Mark</td>
-                                            <td>09 / 07 / 2018</td>
-                                            <td>
-                                                <div class="progress" style="height: 8px;">
-                                                    <div class="progress-bar bg-warning" role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                                </div>
-                                            </td>
-                                            <td><span class="status-p bg-warning">panding</span></td>
-                                            <td>
-                                                <ul class="d-flex justify-content-center">
-                                                    <li class="mr-3"><a href="#" class="text-secondary"><i class="fa fa-edit"></i></a></li>
-                                                    <li><a href="#" class="text-danger"><i class="ti-trash"></i></a></li>
+                                                    <li class="mr-3">
+                                                        <a [routerLink]="['/product/create-edit']" [queryParams]="{id: item.productId}" class="text-secondary">
+                                                            <i class="fa fa-edit"></i>
+                                                        </a>
+                                                    </li>
+                                                    <li *ngIf="item.status !== 'Deactive'"><a (click)="deleteProduct(item.productId)" class="text-danger"><i class="ti-trash"></i></a>
+                                                    </li>
                                                 </ul>
                                             </td>
                                         </tr>
