--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -727,8 +727,8 @@ ul.breadcrumbs {
     align-items: center;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    background: -webkit-linear-gradient(left, #8914fe 0%, #8063f5 100%);
-    background: linear-gradient(to right, #8914fe 0%, #8063f5 100%);
+    /* background: -webkit-linear-gradient(left, #8914fe 0%, #8063f5 100%);
+    background: linear-gradient(to right, #8914fe 0%, #8063f5 100%); */
     padding: 17px 38px;
     position: relative;
 }
@@ -1739,7 +1739,7 @@ table.dbkit-table tr td {
 
 .alert {
     letter-spacing: 0;
-    font-size: 13px;
+    /* font-size: 13px; */
     border: none;
     padding: 10px 16px;
 }
@@ -1790,6 +1790,13 @@ table.dbkit-table tr td {
 
 .alert-heading {
     margin-bottom: 7px;
+}
+
+.alert-dismiss {
+    width: 200px;
+    position: absolute;
+    right: 0;
+    top: 150px;
 }
 
 .alert-dismiss .alert {
@@ -1885,6 +1892,7 @@ p.card-text {
 }
 
 .dropdown-item {
+    text-align: center;
     font-size: 14px;
 }
 
