--- a/src/app/inside/transaction/transaction.component.html
+++ b/src/app/inside/transaction/transaction.component.html
@@ -12,12 +12,11 @@
         </div>
         <div class="col-sm-6 clearfix">
             <div class="user-profile pull-right">
-                <img class="avatar user-thumb" src="assets/images/author/avatar.png" alt="avatar">
-                <h4 class="user-name dropdown-toggle" data-toggle="dropdown">Kumkum Rai <i class="fa fa-angle-down"></i></h4>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Message</a>
-                    <a class="dropdown-item" href="#">Settings</a>
-                    <a class="dropdown-item" href="#">Log Out</a>
+                <div class="search-box pull-left">
+                    <form action="#">
+                        <input type="text" name="search" placeholder="Search...">
+                        <i class="ti-search"></i>
+                    </form>
                 </div>
             </div>
         </div>
@@ -30,7 +29,7 @@
         <div class="col-12 mt-5">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="header-title">Progress Table</h4>
+                    <h4 class="header-title">Transaction Table</h4>
                     <div class="single-table">
                         <div class="table-responsive">
                             <table class="table table-hover progress-table text-center">
